--- a/kadai1/stylesheet.css
+++ b/kadai1/stylesheet.css
@@ -10,6 +10,7 @@ body {
   padding: 20px 0;
 }
 .main {
+  /* flex-grow: 1 で残りの幅全部を埋める */
   flex-grow: 1;
   display: flex;
   background: #ddd;
@@ -17,7 +18,8 @@ body {
 .sidebar {
   background: #fab;
 }
-.sidebar > div {
+/* > は直下のdivにだけにスタイルが反映される */
+.sidebar > div { 
   text-align: center;
   padding: 8px;
   width: 200px;
@@ -32,10 +34,12 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0 -10px;
+  /* 上下0 左右-10px */
 }
 .box-child {
   width: 200px;
   height: 200px;
   background: blue;
   margin: 0 10px 20px;
+  /* 上0 左右10px 下20px */
 }
